# advent

./: .envrc  .gitignore  Cargo.toml  README.md  advent_util.py  comp.py  flake.nix  run_python.py
.codesandbox/: tasks.json
.devcontainer/: devcontainer.json
2015/day01/: solution.py
aoc-util/: Cargo.toml
aoc-util/src/: main.rs  manager.rs  tui.rs
aoc_utils/: __init__.py  load_data.py
data/: readme.md
elixir/: main.exs  mix.exs
haskell-aoc/: aoc.cabal  flake.nix
old_rust/: Cargo.toml
python-aoc/: load_data.py  scripts.py
racket-aoc/: helper.rkt
rust-aoc/: Cargo.toml  input
rust-aoc/2017/: Cargo.toml
rust-aoc/2018/: Cargo.toml
rust-aoc/2018/src/days/: day01.rs
rust-aoc/2019/: Cargo.toml
rust-aoc/2019/src/: main.rs
rust-aoc/2022/: Cargo.toml
rust-aoc/2022/src/: main.rs
rust-aoc/2023/: Cargo.toml
rust-aoc/2023/src/: main.rs
rust-aoc/advent/: Cargo.toml
rust-aoc/advent/src/: lib.rs  main.rs
rust-aoc/advent/src/2019/: day_01.rs
rust-aoc/advent/src/year_2015/: day04.rs
rust-aoc/advent_utils/: Cargo.toml
rust-aoc/aoc/: Cargo.toml
rust-aoc/aoc-util/: Cargo.toml
rust-aoc/aoc-util/src/: lib.rs  main.rs
rust-aoc/aoc/src/: lib.rs  main.rs  manager.rs
rust-aoc/benches/: aoc-timer.rs
rust-aoc/rust-2020/: Cargo.toml
rust-aoc/src/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day17.rs  day18.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  lib.rs  main.rs
rust-aoc/src/2015/: day01_not_quite_lisp.rs
rust-aoc/src/2019/: day02.rs
rust_advent/: Cargo.toml
rustaoc/: Cargo.toml
(+407 files in other folders)
