[package]
name = "aoc-util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version="0.12.9", features = ["blocking"]}
num = "0.4.1"
ratatui = "0.26.2"
crossterm = "0.27.0"
time = "0.3.36"
chrono = "0.4.38"
dotenv = "0.15.0"
