[package]
name = "rust-aoc"
version = "0.1.0"
authors = ["Jacob Newman"]
edition = "2021"

[lib]
bench = false

[dev-dependencies]
criterion = { version = "0.5.1" }

[[bench]]
name = "aoc-timer"
harness = false

[dependencies]
aoc-util = { path = "../aoc-util" }
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
itertools = "0.13.0"
rdxsort = "0.3.0"
regex = "1.11.1"
